--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Anirudh Goel" />
 		<meta name="designer" content="Anirudh Goel" />
 		<meta name="description" content="Anirudh Goel | Summer Student at CERN" />
-		<meta name="keywords" content="anirudhgoel, anirudh goel, anirudhgoel.delhi, anirudhgoeldelhi, anirudh, MAIT, Front End Developer, Backend Developer, Web Designer, Web Developer, Graphic Designer, PHP, Python, MySQL, HTML, CSS, Bootstrap, C, C++, API, Photoshop, Illustrator, whythispage, Interpersonal Interaction, Human Nature, Blog">
+		<meta name="keywords" content="anirudhgoel, anirudh goel, anirudh, goel, CERN, anirudhgoel.delhi, anirudhgoeldelhi, anirudh, MAIT, Front End Developer, Backend Developer, Web Designer, Web Developer, Graphic Designer, PHP, Python, MySQL, HTML, CSS, Bootstrap, C, C++, API, Photoshop, Illustrator, whythispage, Interpersonal Interaction, Human Nature, Blog">
 		<meta name="robots" content="index, follow" />
 		<!-- Facebook -->
 		<meta property="og:url" content="http://www.anirudhgoel.me" />
@@ -513,76 +513,39 @@
 				<br>
 				<div class='container-fluid' align="center">
 					<div class="row">
-						<div class="col-md-6">
-							<div class="intern-box wow fadeInLeft">
+						<div class="col-md-12">
+							<div class="cern-intern-box wow fadeInDown">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
-											<img src="img/intern/Acad.png" alt='Academistic' class='intern-img img-responsive' style="height: 75px; margin-top: 40px;">
+											<img src="img/intern/cern.png" alt='CERN' class='intern-img img-responsive' style="height: 150px; margin-top: 40px;">
 										</div>
 									</div>
 									<div class="col-sm-8" align="left">
 										<div class="intern-panel-body">
 											<div class="intern-box-heading" align="center">
-												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 2px; display: block;"><strong>Academistic</strong></span>
-												<span style="display: block; padding-bottom: 8px; color: #777777">Link temporarily unavailable</span>
+												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><a href="https://phonebook.cern.ch/phonebook/#personDetails/?id=820773"><strong>CERN</strong></a></span>
 												<br>
-												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
-												<div class="col-sm-6 intern-time">June '16 - July '16</div>
+												<div class="col-sm-6 intern-post"><strong>Summer Student</strong></div>
+												<div class="col-sm-6 intern-time">June '17 - Present</div>
 											</div>
 											<br><br>
 											<ul>
-												<li> Implemented Lazy Load on Search Result Page</li>
-												<li> Redesigned entire Login System using OTP Verification </li>
-												<li> Integrated a new multi-level Location Based Search system using AJAX</li>
-												<li> Revamped the Institute Profile Page by integrating a new Rating display system, adding effects like animations when element gets visible</li>
-												<li> Added slugs for all the Institute Profile URLs to improve SEO</li>
+												<li> Setup a <strong>ZeroMQ server</strong> to receive messages from the CERN ALICE machine, and pass them to the application server to generate <strong>Web Notifications</strong> using <strong>Web Sockets</strong>.</li>
+												<li> Designed a Push Notification system using 'web-push' Node.js Package to notify users about occurrence of different events in an effective manner. </li>
+												<li> Using Mocha Test framework for running tests on Node.js (Backend) </li>
+												<li> Using Qunit Test framework for running tests on jQuery (Frontend) </li>
+												<li> Using TravisCI for Continuous Integration </li>
+												<li> Technologies - ZeroMQ, Node.js, Express Framework, Web Sockets, 'web-push' package, Gulp, Mocha Test framework, QUnit Test Framework, TravisCI </li>
 											</ul>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="intern-box wow fadeInLeft">
-								<div class="row">
-									<div class="col-sm-4">
-										<div class='intern-panel-image'>
-											<img src="img/intern/ACM.png" alt='ACM' class='intern-img img-responsive'>
-										</div>
-									</div>
-									<div class="col-sm-8" align="left">
-										<div class="intern-panel-body">
-											<div class="intern-box-heading" align="center">
-												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><a href="http://mait.acm.org/"><strong>ACM</strong> MAIT</a></span>
-												<br>
-												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
-												<div class="col-sm-6 intern-time">June '16 - Present</div>
-											</div>
-											This is the ACM chapter of my college. Here I'm responsible for the development, deployment and maintenance of the website. I made the <a href="http://mait.acm.org/">Home Page</a> and <a href="http://mait.acm.org/contact_us.html">Contact Us</a> page and deployed the website to our server. The major challenges we overcame while remaking of the site were to make it completely responsive and keep its footprint to minimum, so do have a look at it to see how we succeeded!
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="intern-box wow fadeInLeft">
-								<div class="row">
-									<div class="col-sm-4">
-										<div class='intern-panel-image'>
-											<img src="img/intern/prints.png" alt='Academistic' class='intern-img img-responsive' style="height: 75px; width: 75px; margin-top: 40px;">
-										</div>
-									</div>
-									<div class="col-sm-8" align="left">
-										<div class="intern-panel-body">
-											<div class="intern-box-heading" align="center">
-												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="https://www.instagram.com/Printsvilla/">Printsvilla</a></strong></span>
-												<br>
-												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
-												<div class="col-sm-6 intern-time">Nov '16 - Present</div>
-											</div>
-											Developed the <a href="https://anirudhgoel.github.io/Printsvilla/">Product Order form</a> for this Instagram based startup using Firebase BaaS. The form is implemented with features like Logic Jump, Image storing.
-										</div>
-									</div>
-								</div>
-							</div>
 						</div>
+					</div>
+					<br>
+					<div class="row">
 						<div class="col-md-6">
 							<div class="intern-box wow fadeInRight">
 								<div class="row">
@@ -616,7 +579,49 @@
 									</div>
 								</div>
 							</div>
-							<div class="intern-box wow fadeInRight">
+							<div class="intern-box wow fadeInLeft">
+								<div class="row">
+									<div class="col-sm-4">
+										<div class='intern-panel-image'>
+											<img src="img/intern/ACM.png" alt='ACM' class='intern-img img-responsive'>
+										</div>
+									</div>
+									<div class="col-sm-8" align="left">
+										<div class="intern-panel-body">
+											<div class="intern-box-heading" align="center">
+												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><a href="http://mait.acm.org/"><strong>ACM</strong> MAIT</a></span>
+												<br>
+												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
+												<div class="col-sm-6 intern-time">June '16 - Present</div>
+											</div>
+											This is the ACM chapter of my college. Here I'm responsible for the development, deployment and maintenance of the website. I made the <a href="http://mait.acm.org/">Home Page</a> and <a href="http://mait.acm.org/contact_us.html">Contact Us</a> page and deployed the website to our server. The major challenges we overcame while remaking of the site were to make it completely responsive and keep its footprint to minimum, so do have a look at it to see how we succeeded!
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="intern-box wow fadeInLeft">
+								<div class="row">
+									<div class="col-sm-4">
+										<div class='intern-panel-image'>
+											<img src="img/intern/prints.png" alt='Academistic' class='intern-img img-responsive' style="height: 75px; width: 75px; margin-top: 40px;">
+										</div>
+									</div>
+									<div class="col-sm-8" align="left">
+										<div class="intern-panel-body">
+											<div class="intern-box-heading" align="center">
+												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="https://www.instagram.com/Printsvilla/">Printsvilla</a></strong></span>
+												<br>
+												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
+												<div class="col-sm-6 intern-time">Nov '16 - Present</div>
+											</div>
+											Developed the <a href="https://anirudhgoel.github.io/Printsvilla/">Product Order form</a> for this Instagram based startup using Firebase BaaS. The form is implemented with features like Logic Jump, Image storing.
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- <div class="intern-box wow fadeInRight">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -642,7 +647,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="intern-box wow fadeInRight">
 								<div class="row">
 									<div class="col-sm-4">
