added new technologies and fixed css

--- a/index.html
+++ b/index.html
@@ -616,6 +616,7 @@
 												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
 												<div class="col-sm-6 intern-time">Nov '16 - Present</div>
 											</div>
+											<br><br>
 											Developed the <a href="https://anirudhgoel.github.io/Printsvilla/">Product Order form</a> for this Instagram based startup using Firebase BaaS. The form is implemented with features like Logic Jump, Image storing.
 										</div>
 									</div>
@@ -690,11 +691,14 @@
 					<div class="row">
 						<div class="col-sm-4">
 							<div class="tech-box1 wow fadeInUp">
+								Node.js<br><br>
+								Express Framework<br><br>
 								Python<br><br>
 								Django : Python Framework<br><br>
 								Flask : Python Micro Framework<br><br>
 								PHP<br><br>
 								Slim : PHP Micro Framework<br><br>
+								ZeroMQ<br><br>
 								JavaScript (JS)<br><br>
 								Bootstrap : CSS Framework<br><br>
 								jQuery : JS Library<br><br>
@@ -703,19 +707,25 @@
 						</div>
 						<div class="col-sm-4">
 							<div class="tech-box2 wow fadeInUp">
+								Web Push Notifications<br><br>
+								Web Sockets<br><br>
 								MySQL RDBMS<br><br>
 								PostgreSQL<br><br>
 								SQLite3<br><br>
 								Firebase BaAS<br><br>
 								Heroku CLI<br><br>
-								APIs<br><br>
-								Asynchronous JavaScript and XML (AJAX)<br><br>
-								JavaScript Object Notation (JSON)<br><br>
-								OAuth Authorization (API)<br><br>
+								Travis CI<br><br>
+								Gulp<br><br>
+								Mocha Test Framework<br><br>
+								QUnit Test Framework<br><br>
+								ESLint Linter<br><br>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="tech-box3 wow fadeInUp">
+								Asynchronous JavaScript and XML (AJAX)<br><br>
+								JavaScript Object Notation (JSON)<br><br>
+								OAuth Authorization (API)<br><br>
 								Cookies and Browser Storage<br><br>
 								Chrome Browser Extensions<br><br>
 								Firefox Browser Extensions<br><br>
@@ -799,7 +809,7 @@
 						<center>
 	        					&nbsp;&nbsp;&nbsp;&nbsp;Copyrights &copy; Anirudh Goel 2017 | 
 		        			<strong>
-		        				<a href="http://madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> &amp; HTML, Vanilla CSS, JavaScript &amp; Bootstrap in India</a>
+		        				<a href="http://madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> in India</a>
 		        			</strong>
 	        			</center>
 	        		</div>
