--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
 			ga('create', 'UA-87453720-1', 'auto');
 			ga('send', 'pageview');
 		</script>
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+			(adsbygoogle = window.adsbygoogle || []).push({
+				google_ad_client: "ca-pub-4087557788199385",
+				enable_page_level_ads: true
+			});
+		</script>
 	</head>
 
 	<body>
@@ -807,14 +814,14 @@
 				<!-- <div class='container'> -->
 					<div class='foot-text row'>
 						<center>
-	        					&nbsp;&nbsp;&nbsp;&nbsp;Copyrights &copy; Anirudh Goel 2017 | 
-		        			<strong>
-		        				<a href="http://madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> in India</a>
-		        			</strong>
-	        			</center>
-	        		</div>
+								&nbsp;&nbsp;&nbsp;&nbsp;Copyrights &copy; Anirudh Goel 2017 | 
+							<strong>
+								<a href="http://madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> in India</a>
+							</strong>
+						</center>
+					</div>
 				</div>
-	        	<!-- </div> -->
+				<!-- </div> -->
 			</section>
 		</div>
 
