added 3 more technologies

--- a/index.html
+++ b/index.html
@@ -706,6 +706,7 @@
 								PHP<br><br>
 								Slim : PHP Micro Framework<br><br>
 								ZeroMQ<br><br>
+								Ionic<br><br>
 								JavaScript (JS)<br><br>
 								Bootstrap : CSS Framework<br><br>
 								jQuery : JS Library<br><br>
@@ -720,6 +721,7 @@
 								PostgreSQL<br><br>
 								SQLite3<br><br>
 								Firebase BaAS<br><br>
+								Ngrok<br><br>
 								Heroku CLI<br><br>
 								Travis CI<br><br>
 								Gulp<br><br>
@@ -738,6 +740,7 @@
 								Firefox Browser Extensions<br><br>
 								xHTML<br><br>
 								C/C++<br><br>
+								C++ API (as CGI)<br><br>
 								Adobe Photoshop<br><br>
 								Adobe Illustrator<br><br>
 								Wordpress<br><br>
