changed font awesome from stylesheet to js and added Quora link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 		<title>Anirudh Goel</title>
 
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/animate.min.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="shortcut icon" href="img/icon2.png">
@@ -89,6 +88,12 @@
 							<a href="https://www.hackerrank.com/Anirudhgoel" target='_blank'>
 								<i class='fa fa-code'></i>
 								&nbsp;Hackerrank
+							</a>
+						</li>
+						<li>
+							<a href="https://www.quora.com/profile/Anirudh-Goel-6" target='_blank'>
+								<i class='fa fa-quora'></i>
+								&nbsp;Quora
 							</a>
 						</li>
 						<li class="dropdown">
@@ -835,6 +840,7 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://use.fontawesome.com/768a40f80a.js"></script>
 		<script src="js/wow.min.js"></script>
 		<script>
 			function changeAnimation() {
