added Snapchat and Instagram

--- a/index.html
+++ b/index.html
@@ -103,9 +103,21 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li>
+									<a href="https://www.snapchat.com/add/anirudhgoel.del" target='_blank'>
+										<i class='fa fa-snapchat-ghost'></i>
+										&nbsp;Snapchat
+									</a>
+								</li>
+								<li>
 									<a href="https://www.pinterest.com/anirudhgoel/" target='_blank'>
 										<i class='fa fa-pinterest'></i>
 										&nbsp;Pinterest
+									</a>
+								</li>
+								<li>
+									<a href="https://www.instagram.com/anirudhdelhi/" target='_blank'>
+										<i class='fa fa-instagram'></i>
+										&nbsp;Instagram
 									</a>
 								</li>
 								<li>
