changed introductio line

--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
 									</span>
 								</strong>
 								<br>
-								Hey friend, currently studying Bachelors of Technology (B. Tech.) at Maharaja Agrasen Institute of Technology, I'm a follower of my instinct and passion which leads me to have considerable knowledge in the fields of Web Development, Graphic Designing, Blogging and more.
+								<!-- Hey friend, currently studying Bachelors of Technology (B. Tech.) at Maharaja Agrasen Institute of Technology, I'm a follower of my instinct and passion which leads me to have considerable knowledge in the fields of Web Development, Graphic Designing, Blogging and more. -->
+								Hey, I am a final-year student of Bachelor of Technology (B.Tech.) in Information Technology (IT) at Maharaja Agrasen Institute of Technology.
 							</div>
 						</div>
 						<div class='col-sm-1'></div>
