added link for project report

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 												<li>Covered the code with Mocha tests, with coverage as high as 91.3%, provided with JSDoc documentation and used Travis for continuous integration.</li>
 												<li>Created a unified notification trigger which can send notifications to both, browsers supporting service workers and to APNS with a single line terminal command.</li>
 												<li>All of this code and corresponding documentation is available on ALICE <a href="https://github.com/AliceO2Group/ControlGui">ControlGUI</a> and <a href="https://github.com/AliceO2Group/Gui">GUI</a> repository.</li>
+												<li>The Project Report can be found <a href="https://cds.cern.ch/record/2282564/files/Project%20Report%20Final.pdf">here</a>.</li>
 											</ul>
 										</div>
 									</div>
