fixed animation inconsistensies

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 				<div class='container-fluid' align="center">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="cern-intern-box wow fadeInDown">
+							<div class="cern-intern-box wow fadeInUp">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -510,7 +510,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow fadeInLeft' align="center">
+							<div class='col-sm-4 wow fadeInRight' align="center">
 								<img src="img/projects/ToDo.png" alt='To Do List' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -600,7 +600,7 @@
 					</div>
 					<div class="proj-text">
 						<div class="row">							
-							<div class='col-sm-4 wow fadeInRight' align="center">
+							<div class='col-sm-4 wow fadeInLeft' align="center">
 								<img src="img/projects/store.png" alt='Online Store APIs' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
