changed CERN link and added target blank

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 									<div class="col-sm-8" align="left">
 										<div class="intern-panel-body">
 											<div class="intern-box-heading" align="center">
-												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><a href="https://phonebook.cern.ch/phonebook/#personDetails/?id=820773"><strong>CERN</strong></a></span>
+												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><a href="http://home.cern" target="_blank"><strong>CERN</strong></a></span>
 												<br>
 												<div class="col-sm-6 intern-post"><strong>Summer Student</strong></div>
 												<div class="col-sm-6 intern-time">June '17 - Sept '17</div>
