renamed chatbot and changed description

--- a/index.html
+++ b/index.html
@@ -472,13 +472,13 @@
 										<div class='panel-heading'>
 											<div class='proj-panel-heading'>
 												<strong>
-													Educational cum Fun Chatbot
+													Education and Fun Chatbot
 												</strong>
 											</div>
 										</div>
 										<div class='panel-body'>
-											This Chatbot gives you answers, but with a wink ;)
-											The Chatbot uses multiple APIs to fetch different types of answers - <strong>HP HavenOn Demand, Wikipedia API, Google YouTube API, Pandora Bots API</strong>. Sometimes it gives you descriptive and informative answers, at other times it's just lousy.<br><br>
+											This Chatbot provides you with both, educational and witty answers.
+											It uses multiple APIs to fetch different types of answers - <strong>HP HavenOn Demand, Wikipedia API, Google YouTube API, Pandora Bots API</strong>. Sometimes it gives you descriptive and informative answers, at other times it's just lousy.<br><br>
 											<strong><a href="https://github.com/AnirudhGoel/Chatbot" target='_blank'>Github</a> |
 											<a href="https://edu-chatbot.herokuapp.com/" target='_blank'>Demo</a></strong>
 										</div>
