--- a/index.html
+++ b/index.html
@@ -773,10 +773,19 @@
 						</div>
 					</div>
 				</div>
+				<br>
+				<div class='foot-text row'>
+					<center>
+							&nbsp;&nbsp;&nbsp;&nbsp;Copyrights &copy; Anirudh Goel 2017 | 
+						<strong>
+							<a href="http://madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> in India</a>
+						</strong>
+					</center>
+				</div>
 			</section>
 
 
-			<section class='page5'>
+			<!-- <section class='page5'>
 				<br><br><br>
 				<div class='headings'>
 					<span style='font-size:70px;'>
@@ -838,18 +847,8 @@
 					</div>
 					<br>
 					<br>
-				<!-- <div class='container'> -->
-					<div class='foot-text row'>
-						<center>
-								&nbsp;&nbsp;&nbsp;&nbsp;Copyrights &copy; Anirudh Goel 2017 | 
-							<strong>
-								<a href="http://madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> in India</a>
-							</strong>
-						</center>
-					</div>
 				</div>
-				<!-- </div> -->
-			</section>
+			</section> -->
 		</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
