removed cale and https to calender project

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 										<div class='panel-body'>
 											A Django based application that functions as a complete planner with features like event organizing, Google Calender Sync, weather details, on-screen clock, responsive design and a beautiful UI.<br><br>
 											<strong><a href="https://github.com/AnirudhGoel/Calender" target='_blank'>Github</a> |
-											<a href="http://productive-calender.herokuapp.com/cale/" target='_blank'>Demo</a></strong>
+											<a href="https://productive-calender.herokuapp.com/" target='_blank'>Demo</a></strong>
 										</div>
 										<div class='panel-footer'>
 											Django, PostgreSQL, Python, Heroku CLI, Google Calender API, HTML5, Vanilla CSS3, jQuery
