updated linkedin link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class='collapse navbar-collapse' id='myNavbar'>
 					<ul class='nav navbar-nav'>
 						<li>
-							<a href="https://in.linkedin.com/in/anirudh-goel-00792774" target='_blank'>
+							<a href="https://in.linkedin.com/in/goelanirudh" target='_blank'>
 								<i class='fa fa-linkedin'></i>
 								&nbsp;LinkedIn
 							</a>
