--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 														 | Club Lead
 													</strong>
 												</div>
-												<div class="col-sm-6 intern-time">Oct '15 - Present</div>
+												<div class="col-sm-6 intern-time">Oct '15 - June '17</div>
 											</div>
 											<br><br>
 											<ul>
@@ -279,7 +279,7 @@
 												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><a href="http://mait.acm.org/"><strong>ACM</strong> MAIT</a></span>
 												<br>
 												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
-												<div class="col-sm-6 intern-time">June '16 - Present</div>
+												<div class="col-sm-6 intern-time">June '16 - Apr '17</div>
 											</div>
 											This is the ACM chapter of my college. Here I'm responsible for the development, deployment and maintenance of the website. I made the <a href="http://mait.acm.org/">Home Page</a> and <a href="http://mait.acm.org/contact_us.html">Contact Us</a> page and deployed the website to our server. The major challenges we overcame while remaking of the site were to make it completely responsive and keep its footprint to minimum, so do have a look at it to see how we succeeded!
 										</div>
@@ -301,7 +301,7 @@
 												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="https://www.instagram.com/Printsvilla/">Printsvilla</a></strong></span>
 												<br>
 												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
-												<div class="col-sm-6 intern-time">Nov '16 - Present</div>
+												<div class="col-sm-6 intern-time">Nov '16 - Dec '17</div>
 											</div>
 											<br><br>
 											Developed the <a href="https://anirudhgoel.github.io/Printsvilla/">Product Order form</a> for this Instagram based startup using Firebase BaaS. The form is implemented with features like Logic Jump, Image storing.
