--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			ga('create', 'UA-87453720-1', 'auto');
 			ga('send', 'pageview');
 		</script>
-		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 		<script>
 			(adsbygoogle = window.adsbygoogle || []).push({
 				google_ad_client: "ca-pub-4087557788199385",
