--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/animate.min.css">
-		<link rel="stylesheet" type="text/css" href="css/style.min.css">
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600|Lato:300,400" rel="stylesheet">
+		<!-- <link rel="stylesheet" type="text/css" href="css/style.min.css"> -->
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="shortcut icon" href="img/icon2.png">
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
