reverted back to Font Awesome 4 with 'defer'

--- a/index.html
+++ b/index.html
@@ -90,25 +90,6 @@
 						</li>
 					</ul>
 					<ul class='nav navbar-nav navbar-right'>
-						<li>
-							<a href="https://in.linkedin.com/in/goelanirudh" target='_blank'>
-								<i class='fa fa-linkedin'></i>
-								&nbsp;LinkedIn
-							</a>
-						</li>
-						<li>
-							<a href="https://github.com/AnirudhGoel" target='_blank'>
-								<i class='fa fa-github'></i>
-								&nbsp;Github
-							</a>
-						</li>
-						<li>
-							<a href="https://www.hackerrank.com/Anirudhgoel" target='_blank'>
-								<i class='fa fa-code'></i>
-								&nbsp;Hackerrank
-							</a>
-						</li>
-						
 						<li class="dropdown">
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 								&nbsp;More
@@ -142,6 +123,25 @@
 							</ul>
 						</li>
 
+
+						<li>
+							<a href="https://in.linkedin.com/in/goelanirudh" target='_blank'>
+								<i class='fa fa-linkedin'></i>
+								&nbsp;LinkedIn
+							</a>
+						</li>
+						<li>
+							<a href="https://github.com/AnirudhGoel" target='_blank'>
+								<i class='fa fa-github'></i>
+								&nbsp;Github
+							</a>
+						</li>
+						<li>
+							<a href="https://www.hackerrank.com/Anirudhgoel" target='_blank'>
+								<i class='fa fa-code'></i>
+								&nbsp;Hackerrank
+							</a>
+						</li>
 						<li>
 							<a href="https://whythispage.wordpress.com/" target='_blank'>
 								<i class='fa fa-wordpress'></i>
@@ -832,7 +832,8 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+		<!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
+		<script defer src="https://use.fontawesome.com/768a40f80a.js"></script>
 		<script src="js/wow.min.js"></script>
 		<script>
 			function changeAnimation() {
