added LinkedIn metadata

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="img/social-image.jpg" />
 		<meta property="og:description" content="Anirudh Goel | Summer Student at CERN" />
+		<!-- LinkedIn -->
+		<meta property='og:title' content='Anirudh Goel' />
+		<meta property='og:image' content='img/social-image.jpg' />
+		<meta property='og:description' content='Anirudh Goel | Software Developer | Summer Student at CERN' />
+		<meta property='og:url' content='http://anirudhgoel.me' />
 		<!-- Google Plus -->
 		<meta itemprop="name" content="Anirudh Goel" />
 		<meta itemprop="description" content="Anirudh Goel | Summer Student at CERN" />
