added https to pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="Anirudh Goel | Summer Student at CERN" />
 		<meta name="robots" content="index, follow" />
 		<!-- Facebook -->
-		<meta property="og:url" content="http://www.anirudhgoel.me" />
+		<meta property="og:url" content="https://www.anirudhgoel.me" />
 		<meta property="og:site_name" content="Anirudh Goel" />
 		<meta property="og:title" content="Anirudh Goel" />
 		<meta property="og:type" content="website" />
@@ -19,7 +19,7 @@
 		<meta property='og:title' content='Anirudh Goel' />
 		<meta property='og:image' content='img/social-image.jpg' />
 		<meta property='og:description' content='Anirudh Goel | Software Developer | Summer Student at CERN' />
-		<meta property='og:url' content='http://anirudhgoel.me' />
+		<meta property='og:url' content='https://anirudhgoel.me' />
 		<!-- Google Plus -->
 		<meta itemprop="name" content="Anirudh Goel" />
 		<meta itemprop="description" content="Anirudh Goel | Summer Student at CERN" />
@@ -30,14 +30,14 @@
 		<meta name="twitter:description" content="Anirudh Goel | Summer Student at CERN" />
 		<meta name="twitter:site" content="@AnirudhDelhi" />
 		<meta name="twitter:creator" content="@AnirudhDelhi" />
-		<meta name="twitter:url" content="http://www.anirudhgoel.me" />
+		<meta name="twitter:url" content="https://www.anirudhgoel.me" />
 		<meta name="twitter:image" content="img/social-image.jpg" />
 		<!-- Pinterest -->
 		<meta name="p:domain_verify" content="8bfee2aad6e8432b8662e7efeacfe3bf"/>
 
 		<title>Anirudh Goel</title>
 
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/animate.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600|Lato:300,400" rel="stylesheet">
 		<!-- <link rel="stylesheet" type="text/css" href="css/style.min.css"> -->
@@ -221,7 +221,7 @@
 									<div class="col-sm-8" align="left">
 										<div class="intern-panel-body">
 											<div class="intern-box-heading" align="center">
-												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><a href="http://home.cern" target="_blank"><strong>CERN</strong></a></span>
+												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><a href="https://home.cern" target="_blank"><strong>CERN</strong></a></span>
 												<br>
 												<div class="col-sm-6 intern-post"><strong>Summer Student</strong></div>
 												<div class="col-sm-6 intern-time">June '17 - Sept '17</div>
@@ -829,7 +829,7 @@
 		</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script defer src="https://use.fontawesome.com/768a40f80a.js"></script>
 		<script src="js/wow.min.js"></script>
 		<script>
