fixing twitter card issue

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 		<meta itemprop="description" content="Anirudh Goel | Summer Student at CERN" />
 		<meta itemprop="image" content="img/social-image.jpg" />
 		<!-- Twitter -->
-		<meta name="twitter:card" content="summary_large_image" />
+		<!-- <meta name="twitter:card" content="summary_large_image" /> -->
+		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:title" content="Anirudh Goel" />
 		<meta name="twitter:description" content="Anirudh Goel | Summer Student at CERN" />
 		<meta name="twitter:site" content="@AnirudhDelhi" />
