added links for all the technologies known *woof*

--- a/index.html
+++ b/index.html
@@ -700,53 +700,54 @@
 					<div class="row">
 						<div class="col-sm-4">
 							<div class="tech-box1 wow fadeInUp">
-								Node.js<br><br>
-								Express Framework<br><br>
-								Python<br><br>
-								Django : Python Framework<br><br>
-								Flask : Python Micro Framework<br><br>
-								PHP<br><br>
-								Slim : PHP Micro Framework<br><br>
-								ZeroMQ<br><br>
-								Ionic<br><br>
-								JavaScript (JS)<br><br>
-								Bootstrap : CSS Framework<br><br>
-								jQuery : JS Library<br><br>
-								Git<br><br>
+								<a href="https://en.wikipedia.org/wiki/HTML" target="_blank">Hypertext Markup Language 5</a><br><br>
+								<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3" target="_blank">Cascading Style Sheets 3</a><br><br>
+								<a href="https://medium.freecodecamp.org/write-less-do-more-with-javascript-es6-5fd4a8e50ee2" target="_blank">Javascript (ES5 & ES6)</a><br><br>
+								<a href="https://nodejs.org/en/" target="_blank">Node.js</a><br><br>
+								<a href="https://expressjs.com/" target="_blank">Express Framework</a><br><br>
+								<a href="https://en.wikipedia.org/wiki/Single-page_application" target="_blank">Single Page Applications (SPA)</a><br><br>
+								<a href="https://stackoverflow.com/questions/21965738/what-is-virtual-dom" target="_blank">Virtual DOM</a><br><br>
+								<a href="https://www.nginx.com/" target="_blank">Nginx</a>
+								<a href="https://www.python.org/" target="_blank">Python</a><br><br>
+								<a href="https://getbootstrap.com/docs/4.0/getting-started/introduction/" target="_blank">Bootstrap, UIKit : CSS Frameworks</a><br><br>
+								<a href="https://jquery.com/" target="_blank">jQuery : JS Library</a><br><br>
+								<a href="https://git-scm.com/" target="_blank">Git</a><br><br>
+								<a href="https://www.ansible.com/" target="_blank">Ansible Automation</a><br><br>
+								<a href="www.fabfile.org/" target="_blank">Fabric (fabfile.org)</a><br><br>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="tech-box2 wow fadeInUp">
-								Web Push Notifications<br><br>
-								Web Sockets<br><br>
-								MySQL RDBMS<br><br>
-								PostgreSQL<br><br>
-								SQLite3<br><br>
-								Firebase BaAS<br><br>
-								Ngrok<br><br>
-								Heroku CLI<br><br>
-								Travis CI<br><br>
-								Gulp<br><br>
-								Mocha Test Framework<br><br>
-								QUnit Test Framework<br><br>
-								ESLint Linter<br><br>
+								<a href="https://www.djangoproject.com/" target="_blank">Django : Python Framework</a><br><br>
+								<a href="flask.pocoo.org/" target="_blank">Flask : Python Micro Framework</a><br><br>
+								<a href="https://www.w3schools.com/pHP/default.asp" target="_blank">PHP</a><br><br>
+								<a href="https://www.slimframework.com/" target="_blank">Slim : PHP Micro Framework</a><br><br>
+								<a href="https://developers.google.com/web/fundamentals/codelabs/push-notifications/" target="_blank">Web Push Notifications</a><br><br>
+								<a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API" target="_blank">Web Sockets</a><br><br>
+								<a href="https://www.mysql.com/" target="_blank">MySQL RDBMS</a><br><br>
+								<a href="https://www.postgresql.org/" target="_blank">PostgreSQL</a><br><br>
+								<a href="https://firebase.google.com/docs/web/setup" target="_blank">Firebase BaAS</a><br><br>
+								<a href="https://travis-ci.org/" target="_blank">Travis CI</a><br><br>
+								<a href="https://gulpjs.com" target="_blank">Gulp</a><br><br>
+								<a href="https://mochajs.org/" target="_blank">Mocha Test Framework</a><br><br>
+								<a href="https://qunitjs.com/" target="_blank">QUnit Test Framework</a><br><br>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="tech-box3 wow fadeInUp">
-								Asynchronous JavaScript and XML (AJAX)<br><br>
-								JavaScript Object Notation (JSON)<br><br>
-								OAuth Authorization (API)<br><br>
-								Cookies and Browser Storage<br><br>
-								Chrome Browser Extensions<br><br>
-								Firefox Browser Extensions<br><br>
-								xHTML<br><br>
-								C/C++<br><br>
-								C++ API (as CGI)<br><br>
-								Adobe Photoshop<br><br>
-								Adobe Illustrator<br><br>
-								Wordpress<br><br>
-								Joomla<br><br>
+								<a href="https://oauth.net/2/" target="_blank">OAuth Authorization</a><br><br>
+								<a href="openid.net/connect/" target="_blank">OpenID Connect Authentication</a><br><br>
+								<a href="https://www.heroku.com/" target="_blank">Heroku CLI</a><br><br>
+								<a href="https://ngrok.com/" target="_blank">Ngrok</a><br><br>
+								<a href="https://www.w3schools.com/xml/ajax_intro.asp" target="_blank">Asynchronous JavaScript and XML (AJAX)</a><br><br>
+								<a href="https://www.json.org/" target="_blank">JavaScript Object Notation (JSON)</a><br><br>
+								<a href="https://www.w3schools.com/htmL/html5_webstorage.asp" target="_blank">Cookies and Browser Storage</a><br><br>
+								<a href="https://en.wikipedia.org/wiki/Browser_extension" target="_blank">Browser Extensions</a><br><br>
+								<a href="https://ionicframework.com/" target="_blank">Ionic</a><br><br>
+								<a href="https://www.geeksforgeeks.org/c-plus-plus/" target="_blank">C/C++</a><br><br>
+								<a href="https://www.adobe.com/products/photoshop.html" target="_blank">Adobe Photoshop</a><br><br>
+								<a href="https://www.adobe.com/products/illustrator.html" target="_blank">Adobe Illustrator</a><br><br>
+								<a href="https://wordpress.org/download/" target="_blank">Wordpress</a><br><br>
 							</div>
 						</div>
 					</div>
