--- a/index.html
+++ b/index.html
@@ -163,11 +163,8 @@
 
 		<div class="main">
 			<section class='page1'>
-				<br><br><br><br><br><br>
-				<center>
-					<img alt='Anirudh Goel' class='dp img-thumbnail img-responsive' src="img/Anirudh.jpg">
-				</center>
 				<br>
+				<img alt='Anirudh Goel' class='dp img-responsive' src="img/Anirudh.png">
 				<div class='container-fluid'>
 					<br>
 					<br>
@@ -184,14 +181,14 @@
 						<div class='col-sm-10'>
 							<br>
 							<div class='intro-text'>
-								<strong>
-									<span style='font-size:24px;'>
+								<!-- <strong> -->
+									<!-- <span style='font-size:24px;'>
 										Greetings!	Anirudh Goel welcomes you!
-									</span>
-								</strong>
-								<br><br>
+									</span> -->
+								<!-- </strong> -->
 								<!-- Hey friend, currently studying Bachelors of Technology (B. Tech.) at Maharaja Agrasen Institute of Technology, I'm a follower of my instinct and passion which leads me to have considerable knowledge in the fields of Web Development, Graphic Designing, Blogging and more. -->
-								Hey, I am a final-year student of Bachelor of Technology (B.Tech.) in Information Technology (IT) at Maharaja Agrasen Institute of Technology.
+								<!-- Hey, I am a final-year student of Bachelor of Technology (B.Tech.) in Information Technology (IT) at Maharaja Agrasen Institute of Technology. -->
+								Hey, welcome to Anirudh Goel's space on the Internet. <br>Anirudh is an IT Engineer who likes Coffee, Driving, Coding and his MacBook.
 							</div>
 						</div>
 						<div class='col-sm-1'></div>
