Remove year from Copyright

--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 				<br>
 				<div class='foot-text row'>
 					<center>
-							&nbsp;&nbsp;&nbsp;&nbsp;Copyrights &copy; Anirudh Goel 2017 | 
+							&nbsp;&nbsp;&nbsp;&nbsp;Copyrights &copy; Anirudh Goel | 
 						<strong>
 							<a href="http://madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> in India</a>
 						</strong>
