--- a/new/index.html
+++ b/new/index.html
@@ -176,11 +176,11 @@
 					<br>
 					<br>
 					<div class='row'>
-						<div class='col-sm-12'>
+						<!-- <div class='col-sm-12'> -->
 							<div class='name'>
 								<div id="vivus-name"></div>
 							</div>
-						</div>
+						<!-- </div> -->
 					</div>
 					<div class='row'>
 						<div class='col-sm-1'></div>
