Add Loader image

--- a/new/index.html
+++ b/new/index.html
@@ -53,16 +53,10 @@
 			ga('create', 'UA-87453720-1', 'auto');
 			ga('send', 'pageview');
 		</script>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<script>
-			(adsbygoogle = window.adsbygoogle || []).push({
-		  		google_ad_client: "ca-pub-4087557788199385",
-		  		enable_page_level_ads: true
-			});
-		</script>
 	</head>
 
 	<body>
+		<div class="loader"></div>
 		<nav class='navbar navbar-inverse navbar-fixed-top'>
 			<div class='container-fluid'>
 				<div class='navbar-header'>
