Add Wave at the top of second section

--- a/new/index.html
+++ b/new/index.html
@@ -198,11 +198,11 @@
 			</section>
 
 
-			<section class='page3' data-parallax="scroll" data-image-src="img/back1.jpg">
+			<section class='page3 background--wave' data-parallax="scroll" data-image-src="img/back1.jpg">
 				<br>
 				<br>
 				<br>
-				<div class='headings' style="color: white; text-shadow: none;">
+				<div class='headings'>
 					Internships &amp; Experiences
 				</div>
 				<br>
